--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,11 @@
 ChangeLog
 *********
 
+0.5.0 (2015-04-13)
+==================
+
+- Adds the Osf harvester
+
 0.4.0 (2015-04-10)
 ==================
 
