--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,10 @@
 ChangeLog
 *********
 
+0.7.2 (2015-06-30)
+==================
+- Make harvesters run monday-sunday by default
+
 0.7.1 (2015-06-15)
 ==================
 - Base OAI schema now includes DOIs as object URIs
