--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,10 @@
 ChangeLog
 *********
 
+0.7.3 (2015-07-07)
+==================
+- Add Daily SSRN harvester
+
 0.7.2 (2015-06-30)
 ==================
 - Make harvesters run monday-sunday by default
