--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,10 @@
 ChangeLog
 *********
 
+0.7.4 (2015-07-08)
+==================
+- Fix probabilistic test failures
+
 0.7.3 (2015-07-07)
 ==================
 - Add Daily SSRN harvester
