--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,10 @@
 ChangeLog
 *********
 
+0.7.6 (2015-07-10)
+==================
+- Fix language harvesting for DOE and OAI harvesters
+
 0.7.5 (2015-07-10)
 ==================
 - Fix shareok harvester (SSL verification failures ignored)
