--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,10 @@
 ChangeLog
 *********
 
+0.9.1 (2015-09-01)
+==================
+- Document __repr__ no longer throw exceptions (allowing errors to be reported)
+
 0.9.0 (2015-08-27)
 ==================
 - Update setup documentation
