--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,10 @@
 ChangeLog
 *********
 
+0.9.4 (2015-09-10)
+==================
+- Biomedcentral harvester now filters out results from the future
+
 0.9.3 (2015-09-01)
 ==================
 - Capture more uris from pubmedcentral harvester
