--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,10 @@
 ChangeLog
 *********
 
+0.9.7 (2015-09-18)
+==================
+- Bugfixes for OAI url gathering
+
 0.9.6 (2015-09-17)
 ==================
 - Elasticsearch now retries requests after connection errors
@@ -17,7 +21,6 @@ days before the end date
 ==================
 - Clinical Trials harvester now dumps lxml elements to dicionaries in
 	the otherProperties field
-
 
 0.9.4 (2015-09-10)
 ==================
