--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,10 @@
 ChangeLog
 *********
 
+0.10.1 (2015-11-05)
+==================
+- Fix invalid database serialization declaration
+
 0.10.0 (2015-11-04)
 ==================
 - Add harvesters:
