--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,11 @@
 ChangeLog
 *********
 
+0.11.1 (2015-11-20)
+===================
+- Change some harvester long names
+
+
 0.11.0 (2015-11-19)
 ===================
 - Improved documentation
