--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,10 @@
 ChangeLog
 *********
 
+0.11.3 (2015-11-23)
+===================
+- Parse emails, ORCIDs and affiliations from DOE related services
+
 0.11.2 (2015-11-20)
 ===================
 - Fix description parsing for lwbin
