--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,10 @@
 ChangeLog
 *********
 
+0.11.4 (2015-12-07)
+===================
+- Add EngagedScholarship@CSU to harvesters
+
 0.11.3 (2015-11-23)
 ===================
 - Parse emails, ORCIDs and affiliations from DOE related services
