--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,14 @@
 ChangeLog
 *********
 
+0.11.10 (2016-01-08)
+====================
+- Fix favicons for 
+	- Addis Ababa
+	- Ghent
+	- NIST
+	- Texas State
+
 0.11.9 (2015-12-29)
 ===================
 - Fix Addis Ababa URL gathering (strings were not being mutated)
