--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,11 @@
 ChangeLog
 *********
 
+0.11.11 (2016-01-26)
+====================
+- fixing typos
+
+
 0.11.10 (2016-01-08)
 ====================
 - Fix favicons for 
