--- a/CHANGELOG
+++ b/CHANGELOG
@@ -4,6 +4,10 @@ ChangeLog
 
 0.11.11 (2016-01-26)
 ====================
+- moving tags into main schema for crossref
+
+0.11.11 (2016-01-26)
+====================
 - fixing typos
 
 
