--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,7 +2,11 @@
 ChangeLog
 *********
 
-0.11.11 (2016-01-26)
+0.11.13 (2016-01-26)
+====================
+- fix favocon for trinity
+
+0.11.12 (2016-01-26)
 ====================
 - moving tags into main schema for crossref
 
