Update changelog with new harvesters

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,15 @@
 ChangeLog
 *********
 
+0.11.15 (2016-01-26)
+====================
+- Add harvesters:
+	- eLife Sciences
+	- Digital Commons @ Illinois Wesleyan University
+	- K-State Research Exchange
+	- New Prairie Press at Kansas State University
+	- University of South Florida - Scholar Commons
+	- University of Tennessee at Chattanooga
 
 0.11.14 (2016-01-26)
 ====================
