--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,10 @@
 ChangeLog
 *********
 
+0.11.16 (2016-01-26)
+====================
+- Change default encoding recovery to look for None
+
 0.11.15 (2016-01-26)
 ====================
 - Add harvesters:
