--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,12 @@
 ChangeLog
 *********
 
+0.12.1 (2016-02-04)
+====================
+- Push API updates to work with new format
+- Pin version of invoke for travis
+- Change local dist to use postgres over cassandra
+
 0.12.0 (2016-01-26)
 ====================
 - Adding push API harvester
