--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,10 @@
 ChangeLog
 *********
 
+0.13.01 (2016-02-18)
+====================
+- Bump django and djangorestframework versions in requirements
+
 0.13.0 (2016-02-18)
 ====================
 - Add harvesters:
