--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,12 @@
 ChangeLog
 *********
 
+0.13.02 (2016-02-23)
+====================
+- Provide for deleting documents from es index from push API w/status deleted
+- Add script for deleting a few documents in production
+
+
 0.13.01 (2016-02-18)
 ====================
 - Bump django and djangorestframework versions in requirements
