--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,31 @@
 ChangeLog
 *********
 
+0.13.03 (2016-02-23)
+====================
+- Add harvesters:
+	- fit: Florida Institute of Technology
+
+0.13.02 (2016-02-23)
+====================
+- Provide for deleting documents from es index from push API w/status deleted
+- Add script for deleting a few documents in production
+
+
+0.13.01 (2016-02-18)
+====================
+- Bump django and djangorestframework versions in requirements
+
+0.13.0 (2016-02-18)
+====================
+- Add harvesters:
+	- cuny: City University of New York
+	- ukansas: KU ScholarWorks
+- Update harvesters:
+	- springer to not normalize records published by biomedcentral
+	- dataone to only normalize metadata records
+- Postgres web API serializer updates to json
+
 0.12.2 (2016-02-04)
 ====================
 - Push API harvester updates to work with unvalidated email addresses
