--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,10 @@
 ChangeLog
 *********
 
+0.13.10 (2016-05-18)
+====================
+- update longname for boise state
+
 0.13.09 (2016-05-18)
 ====================
 - Add harvesters:
